0023369: MSVC++ warnings issued during compilation for 64bits, Materials.cxx

Replaced 'Standard_Integer' with 'Standard_Size' to avoid compiler warning.